Bug 410513 - Properties dialog box for components does not display links
Summary: Properties dialog box for components does not display links
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.28.3 (KDE Applications 19.04.3)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-02 12:18 UTC by Ralf Habacker
Modified: 2019-08-03 16:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.29.0 (KDE Applications 19.08.0)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-08-02 12:18:35 UTC
SUMMARY


STEPS TO REPRODUCE
1. start umbrello
2. add component diagram
3. add a component and an interface
4. connect conponent and interface with an association
5. Open property dialog for the added component

OBSERVED RESULT
The property dialog does not show a page for associations

EXPECTED RESULT
The property dialog should show a page for associations


ADDITIONAL INFORMATION
The property dialog for the interface shows a page for associations
Comment 1 Ralf Habacker 2019-08-03 16:44:00 UTC
Git commit 4855a415be0a0cec9d9abb7870f895eb9f61f878 by Ralf Habacker.
Committed on 03/08/2019 at 16:43.
Pushed by habacker into branch 'Applications/19.08'.

Fix 'Properties dialog box for components does not display links'
FIXED-IN:2.29.0 (KDE Applications 19.08.0)

M  +1    -1    umbrello/dialogs/classpropertiesdialog.cpp

https://commits.kde.org/umbrello/4855a415be0a0cec9d9abb7870f895eb9f61f878