Fix 'Properties dialog box for components does not display links'

BUG:410513
FIXED-IN:2.29.0 (KDE Applications 19.08.0)